change karma runner settings

--- a/.eslintrc
+++ b/.eslintrc
@@ -2,5 +2,13 @@
   "extends": "standard",
   "plugins": [
     "html"
-  ]
+  ],
+  "env": {
+    "node": true,
+    "mocha": true
+  },
+  "globals": {
+    "chai": true,
+    "expect": true
+  }
 }
