--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "karma-chrome-launcher": "^2.2.0",
     "karma-mocha": "^1.3.0",
     "karma-mocha-reporter": "^2.2.5",
+    "karma-nyan-reporter": "^0.2.5",
     "karma-webpack": "^2.0.9",
     "mocha": "^4.0.1",
     "node-sass": "^4.7.2",
